Revert "fix image cropping mainpage"
This reverts commit 765022260820267385bd4f038c5a8ee2aab67f5b.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,5 +29,25 @@
   margin-right: auto;
 }
 
-
+/* Try to make main carousel take up the whole page */
+html, body {
+    height: 100%;
+}
+#carousel-main, .main-item {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+}
+.carousel-inner {
+    height: 100%;
+}
+.fill {
+    width: 100%;
+    height: 100%;
+    background-position: center;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
 
